Change professor name

--- a/myHomework.tex
+++ b/myHomework.tex
@@ -14,7 +14,7 @@
 \FirstStudentID{123 456 789}
 \SecondStudentName{Nom étudiant}
 \SecondStudentID{987 654 321}
-\ProfessorName{Ronald Beaubrun}
+\ProfessorName{Professeur X}
 \ProfessorTitle{Ing., Professeur}
 \UniversityDepartment{Département d'informatique \\ et de génie logiciel}
 \UniversityName{Université Laval}
