Fix class if there's no second student

--- a/myHomework/homework.cls
+++ b/myHomework/homework.cls
@@ -223,9 +223,9 @@
 
 % Definitions of the title page default parameters                
 \def\theFirstStudentName{Name of the first student}
-\def\theFirstStudentName{ID of the first student}
-\def\theSecondStudentName{Name of the second student}
-\def\theSecondStudentID{ID of the second student}
+\def\theFirstStudentNameID{ID of the first student}
+\def\theSecondStudentName{~} %Blank space if there's no seconde student
+\def\theSecondStudentID{~}
 
 \def\theClassName{Name of your class}
 \def\theClassNumber{Number of your class}
