--- a/myHomework/myHomework.tex
+++ b/myHomework/myHomework.tex
@@ -12,8 +12,8 @@
 \HomeworkTitle{Devoir 1}
 \FirstStudentName{Nom étudiant}
 \FirstStudentID{123 456 789}
-\SecondStudentName{Nom étudiant}
-\SecondStudentID{987 654 321}
+\SecondStudentName{Nom etudiant}  % Comment this if
+\SecondStudentID{987 654 321}     % there's no second student
 \ProfessorName{Professeur X}
 \ProfessorTitle{Ing., Professeur}
 \UniversityDepartment{Département d'informatique \\ et de génie logiciel}
